assets/css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
/* ****************** Reset CSS ****************** */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* ****************** Fonts ****************** */
@font-face {
	font-family: Codec;
	src: url(../fonts/CodecPro-Regular.ttf);
}
@font-face {
	font-family: Omega;
	src: url(../fonts/Omega+Sans+Regular.ttf);
}
@font-face {
	font-family: Futura;
	src: url(../fonts/Futura-Heavy.ttf);
}
/* ****************** Style général ****************** */
html, body {
    width: 100%;
    height: 100%;
	overflow-x: hidden;
	color: #303030;
	font-family: Omega;
}
h1, h2, h3, h4, h5, h6 {
	font-family: Futura;
	color: black;
}
.mobile {
	display: none;
}
a {
	text-transform: none;
	color: #303030;
	text-decoration: none;
}
.overlay {
	z-index: 1;
	position: absolute;
	width: 100%;
	height: 100vh;
	background: #fff;
	top: 0%;
	overflow: hidden;
}
.overlay img {
	object-fit: cover;
	object-position: 50% 50%;
	width: 100%;
	height: 100%;
}
.overlay button {
	position: absolute;
	top: 81%;
	left: 53%;
	transform: translate(-81%, -53%);
	border-radius: 100%;
	width: 175px;
	height: 175px;
	cursor: pointer;
	text-align: center;
	background: transparent;
	appearance: none;
	-webkit-appearance: none;
    -moz-appearance: none;
	border: 1px solid rgba(0,0,0,0.7);
	font-size: 20px;
	font-family: Omega;
	letter-spacing: 10px;
	color: black;
}
body {
    background-image: url(../../img/OMS-bg.jpg);
    min-height: 100%;
	width: auto;
    background-attachment: fixed;
    background-position: 50% 50%;
	background-size: cover; 
	display: grid;
	grid-template-columns: 250px 1fr;
	grid-template-rows: 1fr;
	grid-template-areas: "header main"
}
header {
	grid-area: header;
	/* border: 1px solid black; */
	background: #111;
	/* background: #2F363E; */
	color: #eeeeee;
}
header h3, header a {
	color: #eeeeee;
}
header h3 {
	margin: 10px;
}
.header-wrapper {
	position: fixed;
	height: 100%;
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: 1fr 1fr 50px 1fr 75px 75px;
	grid-template-areas: "logo"
						 "nav"
						 "waves"
						 "footer"
						 "svg"
						 "credits";
	justify-content: center;
}
.header-wrapper nav {
	grid-area: nav;
	text-align: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.header-wrapper nav p {
	font-size: 14px;
	font-family: Omega;
	color: #EEEEEE;
	margin: 10px;
}
.logo {
	grid-area: logo;
	text-align: center;
}
.logo img {
	width: 220px;
	height: 220px;
	padding-top: 10px;
	padding-bottom: 10px;
}
.svg-wrapper {
	grid-area: svg;
	height: 100%;
	background: #111;
	display: flex;
	align-items: center;
	justify-content: center;
	overflow: hidden;
}
svg {
	width: 250px;
	height: 50px;
}
  line {
	stroke-width: 1;
	stroke: #3c3c3c;
}
  #wave {
	fill: none;
	stroke-width: 1;
	stroke-linecap: round;
	stroke-linejoin: round;
	stroke: #eeeeee;
}
.footer-content {
	grid-area: footer;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	color: #EEEEEE;
}
.footer-content__email, .footer-content__address, .footer-content__social, .footer-content__credits {
	height: 100%;
	display: flex;
	flex-direction: column;
	text-align: center;
	justify-content: center;
}
.footer-content__credits p {
	margin-bottom: 5px;
}
main {
	grid-area: main;
	margin-right: 100px;
	/* display: grid; */
}
section {
	margin: 15px;
}
.section-title {
	font-size: 25px;
	line-height: 48px;
	width: 100%;
	overflow: hidden;
	text-align: center;
	padding-top: 10px;
	padding-bottom: 20px;
}
  .section-title:before, .section-title:after {
	content: '';
	display: inline-block;
	vertical-align: middle;
	width: 10vw;
	height: 3px;
	border-top: 1px solid rgba(0,0,0,0.7);
  }
  .section-title:before {
	margin-right: 10px;
  }
  .section-title:after {
	margin-left: 10px;
  }
  #about p {
	text-align: center;
	margin: 0 15px 20px 15px;
	font-size: 20px;
	line-height: 1.4;
}
.services-content, .works-content {
	display: flex;
	flex-wrap: wrap;
}
.services-content div {
	width: 33%;
	text-align: center;
	padding-bottom: 25px;
}
h2 {
	letter-spacing: 1.2px;
}
h3 {
	font-size: 21px;
	letter-spacing: 0.7px;
}
#services p {
	text-align: center;
	margin: 10px 10px 15px 10px;
	font-size: 18px;
	line-height: 1.4;
}
#studio-works p, #personal-works p {
	text-align: center;
	margin-bottom: 20px;
}
.works-content {
	justify-content: center;
}
.small-player {
	display: none;
}
.studio-work {
	width: 33%;
	height: auto;
	display: flex;
    flex-direction: column;
    align-items: center;
	z-index: -1;
}
.personal-works .studio-work {
	height: 23vw;
}
.studio-work p {
	margin: 5px;
	font-size: 14px;
}
#warhammer {
	font-size: 13px;
}
.studio-work > p:first-of-type {
	font-weight: bold;
	font-size: 16px;
}
.studio-work iframe, .studio-work img {
	width: 17.5vw;
	height: 17.5vw;
	-webkit-filter: grayscale(100%);
	-moz-filter: grayscale(100%);
	-ms-filter: grayscale(100%);
	filter: grayscale(100%);
	filter: gray; 
	text-align: center;
}
.studio-work iframe:hover, .studio-work img:hover  {
	-webkit-filter: none;
	-moz-filter: none;
	-ms-filter: none;
	filter: none;
	cursor: pointer;
}
#engineer {
	max-width: 1100px;
	margin-left: auto;
	margin-right: auto;
}
.engineer-content {
	display: flex;
	justify-content: center;
	align-items: center;
}
.engineer-content__pic, .engineer-content__desc {
	width: 50%;
	text-align: center;
}
.engineer-content__desc p {
	text-align: left;
	margin: 10px 10px 15px 20px;
	font-size: 18px;
	line-height: 1.4;
}
.engineer-content__pic img {
	max-width: 100%;
	max-height: 100%;
	margin-left: 10px;
}
#contact {
	max-width: 1200px;
	margin-left: auto;
	margin-right: auto;
}
.contact-content {
	padding-bottom: 30px;
}
.contact-content p {
	text-align: center;
	padding-top: 20px;
}
#form {
	display: flex;
	flex-direction: column;
	align-items: center;
}
form > input, textarea {
	font-family: sans-serif;
	font-size: 0.875em;
	width: 80%;
	transition: all 0.3s ease-in-out;
	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-ms-transition: all 0.3s ease-in-out;
	background: transparent;
	color: black;
	outline: none;
}
input {
	height: 50px;
	padding: 0px 15px 0px 15px;
	border: solid 1px #303030;
	border-bottom: none;
}
input:hover {
	background: #505050;
	color: #eeeeee;
}
textarea {
	height: 200px;
	padding: 15px;
	border: solid 1px #303030;
} 
textarea:hover {
	background: #505050;
	color: #eeeeee;
}
#submit {
	width: 50%;
	padding: 0;
	color: #505050;
	cursor: pointer;
	border: solid 1px #303030;
	border-top: none;
}
#submit:hover {
	color: #eeeeee;
}
@media only screen and (max-width: 1440px) {
	body {
		background-size: contain;
	}
	#about p {
		margin: 0 0px 15px 15px;
		font-size: 18px;
		line-height: 1.4;
	}
	#services p {
		margin: 10px 5px 5px 5px;
		font-size: 16px;
		line-height: 1.4;
	}
	.section-title {
		font-size: 22px;
		line-height: 36px;
	}
	h3 {
		font-size: 20px;
	}
}
@media only screen and (max-width: 1280px) {
	main {
		margin-right: 60px;
	}
	.logo img {
		width: 150px;
		height: 150px;
	}
	.services-content div {
		width: 50%;
	}
	.engineer-content {
		flex-direction: column;
	}
	.engineer-content__pic, .engineer-content__desc {
		width: auto;
	}
	.engineer-content__pic img {
		max-width: 60%;
		max-height: 60%;
	}
	.engineer-content__desc p {
		font-size: 16px;
		text-align: center;
	}
}
@media only screen and (max-width: 1024px) {
	#about p {
		font-size: 16px;
	}
	#services p {
		font-size: 15px;
	}
	.engineer-content__pic img {
		max-width: 50%;
		max-height: 50%;
	}
	.engineer-content__desc p {
		font-size: 15px;
	}
	body {
		grid-template-columns: 200px 1fr;
	}
	header {
		font-size: 14px;
	}
	.logo img {
		width: 150px;
		height: 150px;
	}
	section {
		margin: 5px;
	}
	.header-wrapper {
		width: 200px;
	}
}
@media only screen and (max-width: 900px), (max-height: 750px) {
	body {
		grid-template-columns: 1fr;
		grid-template-rows: 90px 1fr;
		grid-template-areas: "mobile"
							 "main";
	}
	header {
		grid-area: unset;
	}
	main {
		margin-right: 30px;
	}
	.desktop {
		display: none;
	}
	/* **********************  Bandeau ********************** */
	.mobile-header {
		grid-area: mobile;
		position: fixed;
		height: 90px;
		width: 100%;
		background: #111;
		display: grid;
		grid-template-rows: 2fr 1fr;
		grid-template-columns: 1fr;
		grid-template-areas: "top"
							 "menu";
	}
	.header-top {
		grid-area: top;
		display: flex;
		justify-content: space-around;
		align-items: center;
	}
	.header-top > div {
		width: 33%;
		text-align: center;
	}
	.header-links img, .header-address span img {
		height: 16px;
		width: 16px;
	}
	.header-address {
		width: 65%;
	}
	.header-links {
		display: flex;
		flex-direction: row;
		justify-content: center;
		align-items: center;
	}
	.header-links div {
		padding : 4px;
	}
	.header-logo {
		text-align: center;
	}
	.header-logo img {
		width: 50px;
		height: 50px;
	}
	.mobile-header nav {
		grid-area: menu;
		display: flex;
		flex-direction: row;
		justify-content: space-around;
		flex-wrap: wrap;
		align-items: center;
	}
	.mobile-header nav p {
		font-size: 10px;
	}
	.header-credits, .header-links span {
		font-size: 12px;
	}
	.header-credits p {
		padding-bottom: 5px;
		padding-right: 3px;
	}
}
@media only screen and (max-width: 600px), (max-height: 750px) {
/* ********************** Général ********************** */
.services-content div {
	width: 100%;
}
.section-title {
	font-size: 20px;
	line-height: 24px;
}
.section-title::before, .section-title::after {
	width: 10vw;
}
h3 {
	font-size: 17px;
}
textarea {
	height: 150px;
}
form > input, textarea {
	width: 85%;
}
.studio-work iframe, .studio-work img {
	-webkit-filter: none;
	-moz-filter: none;
	-ms-filter: none;
	filter: none;
}
.studio-work, .studio-work iframe {
	width: 100%;
}
.contact-content {
	padding-bottom: 0;
}
.large-player {
	display: none;
}
.small-player {
	display: block;
	order: 1;
}
.yt-player {
	margin-bottom: 10px;
	order: 1;
}
}

